# BasicWorkClasses

./: CMakeLists.txt  README.md  hex_test.cpp  main.cpp
include/: hex.hpp  vector.hpp
src/: hex.cpp  hex_arith.cpp  hex_main.cpp  vector.cpp
test/: hex_test.cpp  main.cpp
